# RTS_project

./: start.sh
RTS_project/: README.md
RTS_project/install/: local_setup.sh  setup.sh
RTS_project/log/: latest_build
RTS_project/src/my_robot_controller/: package.xml  setup.py
RTS_project/src/my_robot_controller/my_robot_controller/: __init__.py  attacker_node.py  listener_secure.py  listener_unsecure.py  talker_secure.py  talker_unsecure.py
RTS_project/src/secure_connection/: package.xml  setup.py
RTS_project/src/secure_connection/secure_connection/: authentication.py  generate_key.py  ids_node.py
RTS_project/src/secure_connection/secure_connection/certificates/: README.md
env/: pyvenv.cfg
install/custom_interfaces/share/custom_interfaces/: package.sh
install/my_robot_controller/lib/my_robot_controller/: listener_encrypt  talker_encrypt  unauthorised_listener
log/: latest_build
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/install/: local_setup.sh  setup.sh
src/custom_interfaces/log/: latest_build
src/install/: local_setup.sh  setup.ps1  setup.sh
src/log/: latest_build
src/my_robot_controller/: setup.py
src/my_robot_controller/my_robot_controller/: talker_node.py
src/node_network/: setup.cfg  setup.py
src/node_network/node_network/: alpha.py
src/secure_connection/: package.xml  setup.cfg  setup.py
src/secure_connection/secure_connection/: encrypt.py  generate_key.py
src/test_connections/: package.xml  setup.cfg  setup.py
src/test_latency/: package.xml  setup.cfg  setup.py
(+79 files in other folders)
