<?xml version="1.0"?>
<package format="3">
  <name>secure_connection</name>
  <version>0.0.1</version>
  <description>Security layer for ROS2: AES-GCM encryption, RSA integrity, HMAC authentication, IDS.</description>
  <maintainer email="team@secureSWARM.com">Team Secure Swarm</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
